# RBAC-PoC-FastAPI

./: .gitignore  README.md  manage.py  pyproject.toml  seed_permissions.py
app/: main.py
app/api/v1/endpoints/: object_permission_route.py  role_permission_route.py  role_route.py  user.py  user_route.py  (+2 more)
app/core/: dependencies.py  security.py
app/db/: database.py  init_db.py
app/models/: __init__.py  action.py  audit_log.py  module.py  object_permission.py  permission.py  resource.py  role.py  role_permission.py  user.py  user_permission.py  user_role.py
app/repositories/: object_permission_repo.py  permission_repo.py  resource_repo.py  role_permission_repo.py  role_repo.py  user_permission_repo.py  user_repo.py  user_role_repo.py
app/schemas/: object_permission_schema.py  permission_schema.py  role_permission_schema.py  role_schema.py  user_permission_schema.py  user_role_schema.py  user_schema.py
app/services/: object_permission_service.py  resource_service.py  role_permission_service.py  role_service.py  user_permission_service.py  user_role_service.py  user_service.py
migrations/: env.py
migrations/versions/: 4053be1c7db7_initial_migration.py  518256372d53_initial_migrations.py  b35390792424_initial_migrations.py  e70a482dc350_initial_migrations.py
tests/: README.md  conftest.py  pytest.ini  requirements.txt  test_runner.py
tests/api/: test_user_routes.py
tests/fixtures/: test_data.py
tests/integration/: test_database.py  test_user_workflow.py
tests/unit/: test_dependencies.py  test_security.py  test_user_repository.py  test_user_service.py
